@@ -43,8 +43,10 @@ bindaddr = 0.0.0.0
 ;   sslbindport=5039		; the port to bind to
 ;   sslbindaddr=0.0.0.0		; address to bind to, default to bindaddr
 ;   sslcert=/tmp/asterisk.pem	; path to the certificate.
+;   sslprivatekey=/tmp/private.pem ; path to the private key, if no private given,
+                                   ; if no sslprivatekey is given, default is to search
+								   ; sslcert for private key.
 ;   sslcipher=<cipher string>   ; string specifying which SSL ciphers to use or not use
-
 
 ;
 ;allowmultiplelogin = yes		; IF set to no, rejects manager logins that are already in use.
